# MoodCraft

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  ref-commit.md  script.md  각자폴더에서만개발하세요.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/results/: admin.py  models.py  serializers.py  urls.py  views.py
backend/results/migrations/: 0001_initial.py  0002_resultdetailmodel.py
backend/visiters/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
backend/visiters/migrations/: 0001_initial.py  0002_alter_visiter_gender.py  0003_count.py  0004_delete_count_visiter_count.py  0005_count_remove_visiter_count.py  0006_delete_count.py
css/: choice.css  style.css
develop/garim/: hh.html
develop/yangkong/: README.md
frontend/ryoona/: result.html  team.html  teamST.css  test.html
frontend/ryoona/css/: teamST.css
frontend/ryoona/html/: resultProduct.html  test.html
frontend/ryoona/js/: main.js
frontend/yangkong/css/: choice.css  result.css  style.css
frontend/yangkong/html/: mainPage.html  resultKind.html  team.html
garim/: README.md
html/: choice.html  mainPage.html  progress.html  resultKind.html
img/: README.md  topBanner2.ai
img/copyright/: README.md
jinwoo/: README.md  ref-commit.md  읽고지우세요.md
jinwoo/MoodCraft_back/: db.sqlite3
js/: main.js  progress.js
mer/: style22.css  읽고지우세요.md
pastVersion/choice2/: testChoices_2.html
ryoona/: README.md
script/: script.md
yangkong/: README.md  index.html
yangkong/html/: mainPage.html
yeaeun/: README.md
(+26 files in other folders)
